FISH-13174 Rework ChangeMasterBrokerCommand and supplemental classes for Deployment Groups
Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>